# rust-swift-test

./: .gitignore  Cargo.toml  Package.swift  Readme.md  bridging-header.h  build.rs  cbindgen.toml  deps.sh
Tests/BandersnatchTests/: BandersnatchTest.swift
include/: bindings.h
src/: bandersnatch_vrfs.rs  ffi.rs  lib.rs
